--- a/CSS/style.css
+++ b/CSS/style.css
@@ -74,6 +74,14 @@
   width: 100px;
   height: 100px;
 }
+.clubDescriptionContentTitle{
+  width: 100%;
+  height: 25px;
+  text-align: center;
+  background-color: #292929;
+  margin: 0;
+  font-size: 20px;
+}
 .mainContent{
   display: grid;
   grid-template-columns: 3fr 1fr;
@@ -97,6 +105,7 @@
   transition: 0.4s;
   border-radius: 10px;
   padding: 10px;
+  cursor: pointer;
 }
 .sideBarContent:hover{
   border: 2px solid white;
@@ -105,9 +114,12 @@
   width: 170px;
   height: 100px;
 }
+a{
+  text-decoration: none;
+}
 .footerContent{
   width: 100%;
-  height: 100px;
+  height: 40spx;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -192,6 +204,11 @@
     align-items: center;
   }
   .clubDescription{
+    align-items: center;
+  }
+  .footerContent{
+    display: flex;
+    flex-direction: column;
     align-items: center;
   }
 }
