--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ html, body {
   display: flex;
   flex-direction: column;
   padding: 20px;
+  align-items: center;
 }
 .clubDescriptionContent{
   margin: 8px;
